--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,272 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css?family=Courgette');
+
+html, body, .root {
+  height: 100%;
+  font-size: 100%;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+body {
+  line-height: 2
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body, .app {
+  background: #bcbcd6;
+  color: #280056;
+}
+
+/* main page */
+.list-Of-books-title {
+  background: #100121;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: top;
+  height: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+.list-Of-books-title img {
+  width: 100%;
+  height: inherit;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.list-Of-books-content {
+  flex: 1;
+  height: 100%;
+}
+
+/* Book Shelf */
+.bookshelf {
+  border-top: 18px solid #a6a6bc;
+  border-left: 36px solid #2e2e51;
+  border-right: 36px solid #2e2e51;
+  border-bottom: 36px solid #2e2e51;
+  margin: 0;
+  padding: 0;
+}
+
+.title-of-bookshelf {
+  background: #100121;
+  border-top: 3px solid #5a5ae8;
+  border-bottom: 3px solid #5a5ae8;
+  padding: 20;
+  margin: 0;
+  text-align: center;
+  font-family: 'Courgette', 'regular';
+  color: #c5c5cc;
+}
+
+.books-in-bookshelf {
+  text-align: center;
+  padding: 18px;
+  background-image: url('./icons/shelfBackground.jpg');
+  alt:'Book-shelf';
+  min-height: 280px;
+}
+
+ /*Search*/
+.open-search {
+  position: fixed;
+  right: 25px;
+  bottom: 25px;
+}
+
+.close-search-keyword-info {
+  position: relative;
+  display: block;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+  border: 5;
+  border-radius: 50%;
+  background: #00b1cc;
+  background-image: url('./icons/close.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 28px;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  font-size: 0;
+}
+
+.open-search a,
+.info-search-keywords {
+  display: block;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  background: #00B1CC;
+  background-image: url('./icons/search.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 50px;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  font-size: 0;
+}
+
+.info-search-keywords {
+  background-image: url('./icons/info.svg');
+  width: 40px;
+  height: 40px;
+  position: fixed;
+  right: 25px;
+  top: 5px;
+  cursor: pointer;
+  border: 0;
+}
+
+/* modal with information style */
+.background-of-info-search {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(131,131,170,0.3);
+  padding: 50px;
+}
+
+.info-search-struct {
+  background-color: white;
+  border-radius: 5px;
+  max-width: 600px;
+  min-height: 200px;
+  margin: 0 auto;
+  padding: 30px;
+}
+
+.close-info-search:focus,
+.info-search:focus,
+.open-search a:focus {
+  outline: 5;
+  border: 2px solid white;
+}
+
+/* search page */
+.search-for-books-bar {
+  z-index: 15;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 0 6px rgba(0,0,0,0.23);
+}
+
+.search-for-books-input-wrapper {
+  flex: 1;
+  background: #e9e;
+}
+
+.search-for-books-bar input {
+  width: 100%;
+  padding: 15px 10px;
+  font-size: 1.25em;
+  border: none;
+  outline: none;
+}
+
+.close-the-search {
+  display: block;
+  top: 20px;
+  left: 15px;
+  width: 50px;
+  height: 53px;
+  background: white;
+  background-image: url('./icons/arrow-back.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 28px;
+  font-size: 0;
+}
+
+.search-for-books-results {
+  padding: 80px 10px 20px;
+}
+
+/* books lattice */
+* {
+  box-sizing: border-box;
+}
+
+.lattice-of-books {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-Content: center;
+  flex-wrap: wrap;
+}
+
+.lattice-of-books li {
+  padding: 20px 20px;
+  text-align: left;
+}
+
+/* Book*/
+.book {
+  width: 130px;
+  height: auto;
+  display: flex;
+  flex-flow: column;
+}
+
+.title-of-the-book {
+  margin-top: 10px;
+  color: #000000;
+  font-weight: bold;
+  font-size: 1.5em;
+}
+
+.book-authors {
+  color: #ff6699;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.book-top {
+  position: relative;
+  height: 190px;
+}
+
+/* Book-shelf changer: A dropdown menu that lets us change the current state of a particular book*/
+.book-shelf-changer {
+  position: absolute;
+  right: -20px;
+  bottom: -20px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background: #cc43e8;
+  background-image: url('./icons/arrow-drop-down.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 20px;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+
+.book-shelf-changer select {
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.book-shelf-changer option {
+  background: #43d4e8;
+  font-size: 15px;
+}
+
+/* book cover */
+.book-cover {
+  box-shadow: 0 10px 10px rgba(0,0,0,0.56), 0 3px 6px rgba(0,0,0,0.75);
+  background: #eee;
+  width: 100%;
+  height: 100%;
+  display: block;
+  margin-top: auto;
+  margin-bottom: auto;
+  align-content: center;
+}
+
+.book-cover-title {
+  padding: 20px 10px 0;
+  text-align: center;
+  font-size: 5px;
 }
